# dumin_piotrowski

./: .gitignore  KeyLogger.py  getch.py  multip_test.py  test1.py
cpp_my_robot/: CMakeLists.txt  package.xml
cpp_my_robot/launch/: my_robot.launch.py  my_robot_NONKDL.launch.py
cpp_my_robot/src/: KDL_DKIN.cpp
my_robot/: setup.py
my_robot/my_robot/: NONKDL_DKIN.py
my_robot/share/my_robot/: demo.launch.py  package.ps1  package.sh  package.xml  r2d2.urdf.xml
project3/cpp_my_robot/: CMakeLists.txt
project3/cpp_my_robot/launch/: my_robot_KDL.launch.py
project3/cpp_my_robot/scripts/: NONKDL_DKIN.py
project3/cpp_my_robot/src/: KDL_DKIN.cpp  a.out
project3/cpp_my_robot/urdf/: my_robot.rviz  my_robot.urdf.xml
projekt4/cpp_my_robot/: CMakeLists.txt  package.xml
projekt4/cpp_my_robot/launch/: my_robot_jint.launch.py
projekt4/cpp_my_robot/scripts/: NONKDL_DKIN.py
projekt4/cpp_my_robot/src/: KDL_DKIN.cpp  jint.cpp  jint_control_srv.cpp
projekt4/cpp_my_robot/srv/: JintControl.srv
projekt4/cpp_my_robot/urdf/: my_robot.rviz
translator/: package.xml  setup.cfg  setup.py
translator/translator/: KeyLogger.py  publisher_member_function.py
urdf_project/: package.xml  setup.cfg  setup.py
urdf_project/launch/: demo.launch.py
urdf_project/urdf/: r2d2.urdf.xml
urdf_test/: package.xml  setup.py
urdf_test/launch/: demo.launch.py
